Got it working with circle gesture and running gesture

--- a/spher-leap-trix.html
+++ b/spher-leap-trix.html
@@ -9,4 +9,5 @@
 <template name="game">
   {{> loginButtons align='right'}}<br>
   <h1>Spherlectrix</h1>
+  <button id="connect">Connect</button>
 </template>
